syntax = "proto3";
option java_package = "io.masterkun.mcp.proto";
option java_outer_classname = "ForTestProto";
package io.masterkun.mcp;

import "mcp.proto";

// 用于测试的proto文件

message TestReq {
  string message = 1 [(mcp.field_desc) = "请求内容", (mcp.field_required) = true];
  oneof elem {
    Elem1 elem1 = 2 [(mcp.field_desc) = "请求元素1", (mcp.field_required) = true];
    Elem2 elem2 = 3 [(mcp.field_desc) = "请求元素2", (mcp.field_required) = true];
  }
  map<string, int32> map1 = 4 [(mcp.field_desc) = "MAP1"];
  map<int32, bytes> map2 = 5 [(mcp.field_desc) = "MAP2"];
  repeated string list = 6 [(mcp.field_desc) = "LIST", (mcp.field_required) = true];
  repeated Elem1 elems = 7 [(mcp.field_desc) = "ELEMS"];
}

message Elem1 {
  int32 a1 = 1 [(mcp.field_desc) = "字段a1"];
  bool a2 = 2 [(mcp.field_desc) = "字段a2"];
  bytes a3 = 3 [(mcp.field_desc) = "字段a3", (mcp.field_required) = true];
}

message Elem2 {
  int32 b1 = 1 [(mcp.field_desc) = "字段b1"];
  bool b2 = 2 [(mcp.field_desc) = "字段b2"];
  bytes b3 = 3 [(mcp.field_desc) = "字段b3"];
}

message Elem3 {
  int64 c1 = 2;
  float c2 = 3;
  double c4 = 5;
  repeated bytes c5 = 6;
  repeated double c6 = 7;
}

message TestRes {
  string message = 1 [(mcp.field_desc) = "返回结果"];
  oneof elem {
    Elem1 elem1 = 2 [(mcp.field_desc) = "返回元素1"];
    Elem2 elem2 = 3 [(mcp.field_desc) = "返回元素2"];
  }
}


service ForTestService {


  rpc testGet(TestReq) returns (TestRes) {
    option (mcp.method_desc) = "测试方法";
  }
}
